fix container not fitting buttons on mobile

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -10,6 +10,8 @@ $white: #fff;
 .cc-window {
   .cc-compliance {
     margin-left: 1rem;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   .cc-btn {
